Call trace after unbind of dGPU
Brief summary of the problem:
Unbinding my 5600 XT from the host cause a call trace to appear in dmesg without any real consequences or lockups
Hardware description:
- CPU: AMD Ryzen 5 3600 (12) @ 3.600GHz
- GPU: AMD Radeon RX 5600 XT
System information:
- Distro name: Arch Linux
- Kernel version: 5.14.5.arch1
- Custom kernel: Kernel from https://cgit.freedesktop.org/~agrodzov/linux, commit: "drm/amdgpu: Fix MMIO access page fault" + patch: 0001-drm-amdkfd-handle-svm-migrate-init-error.patch
How to reproduce the issue:
- Boot one of the two kernels
- From tty or graphical environment and as root issue the unbind command to your GPU:
echo -n "xxxx:xx:xx.x" > /sys/bus/pci/drivers/amdgpu/unbind
- Wait for the call trace in dmesg
Attached files:
- dmesg from 5.14.5.arch1: dm_arch_kernel
- dmesg from custom kernel: dm_custom_kernel